# AudiGo

./: .dockerignore  Dockerfile  README.md  gunicorn_conf.py  pyproject.toml  requierments.txt  requirements.txt
config/: settings.py  storages.py  urls.py  wsgi.py
config/settings/: base.py  local.py  prod.py
scripts/: admin.py  models.py  serializers.py  urls.py  views.py
scripts/migrations/: 0001_initial.py  0002_remove_audio_data_url_audio_file.py  0003_remove_audio_create_at_alter_audio_modified_script_and_more.py  0004_alter_audio_file_alter_audio_modified_script_and_more.py  0005_rename_title_audio_script_title.py  0006_audio_summary_script.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_name.py  0003_remove_user_name_user_created_at_and_more.py  0004_rename_using_gpt_roken_user_using_gpt_token.py  0005_user_rem_gpt_token.py  0006_alter_user_email.py
