[tool.poetry]
name = "note-supperter"
version = "0.1.0"
description = ""
authors = ["SonJinHYo <wlsgy95@naver.com>"]
readme = "README.md"
packages = [{include = "note_supperter"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
