[tool.poetry]
name = "note-supperter"
version = "0.1.0"
description = ""
authors = ["SonJinHYo <wlsgy95@naver.com>"]
readme = "README.md"
packages = [{include = "note_supperter"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.3"
django-environ = "^0.10.0"
djangorestframework = "^3.14.0"
boto3 = "^1.28.14"
requests = "^2.31.0"
openai = "^0.27.8"
django-storages = "^1.13.2"
django-cors-headers = "^4.2.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
